--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id "kotlin-kapt"
 }
 
 android {
@@ -30,16 +31,43 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
+    def room_version = "2.3.0"
+    def work_version = "2.5.0"
+    def viewModel_ktx_version = "2.3.1"
+    def android_coroutines_version = "1.5.0"
+    def swipe_refresh_layout_version = "1.1.0"
+    def moshi_version = "1.12.0"
+    def version_retrofit = "2.9.0"
+    def glide_version = "4.11.0"
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    //coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$android_coroutines_version"
+    //room
+    implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    //viewModel-ktx
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$viewModel_ktx_version"
+    //workManager
+    implementation "androidx.work:work-runtime-ktx:$work_version"
+    //swipeRefreshLayout
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:$swipe_refresh_layout_version"
+    //moshi
+    implementation "com.squareup.moshi:moshi-kotlin:$moshi_version"
+    //retrofit
+    implementation "com.squareup.retrofit2:converter-moshi:$version_retrofit"
+    //Glide
+    implementation "com.github.bumptech.glide:glide:$glide_version"
 }
