--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     def moshi_version = "1.12.0"
     def version_retrofit = "2.9.0"
     def glide_version = "4.11.0"
+    def paging_version = "3.0.0"
 
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
@@ -70,4 +71,6 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-moshi:$version_retrofit"
     //Glide
     implementation "com.github.bumptech.glide:glide:$glide_version"
+    //paging-library
+    implementation "androidx.paging:paging-runtime:$paging_version"
 }
